<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/addEventLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:minHeight="205dp"
        tools:context=".activities.AddEventActivity">


        <android.support.v7.widget.Toolbar
            android:id="@+id/addEventToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/ToolbarColoredBackArrow"
            app:titleTextColor="@android:color/white">

        </android.support.v7.widget.Toolbar>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:background="@android:color/transparent"
            android:onClick="saveEvent"
            android:text="@string/general_save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/clientNameField"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="44dp"
            android:hint="@string/add_event_layout_client_name"
            android:inputType="textNoSuggestions"
            android:nextFocusLeft="@id/clientNameField"
            android:nextFocusUp="@id/clientNameField"
            android:textSize="13sp"
            app:layout_constraintDimensionRatio="w,8:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/clientNameIco"
            app:layout_constraintTop_toBottomOf="@+id/addEventToolbar" />

        <EditText
            android:id="@+id/dateField"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:inputType="date"
            android:onClick="showDatePickerDialog"
            android:textSize="13sp"
            app:layout_constraintDimensionRatio="w,2.5:1"
            app:layout_constraintStart_toEndOf="@+id/dateTimeIco"
            app:layout_constraintTop_toBottomOf="@+id/clientNameField" />

        <EditText
            android:id="@+id/timeFromField"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="92dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:inputType="time"
            android:onClick="showTimePickerFromDialog"
            android:textSize="13sp"
            app:layout_constraintDimensionRatio="w,1.5:1"
            app:layout_constraintStart_toEndOf="@+id/dateField"
            app:layout_constraintTop_toBottomOf="@+id/clientNameField" />

        <TextView
            android:id="@+id/timeToField"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:inputType="time"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/clientNameField"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/clientNameField" />

        <ImageView
            android:id="@+id/clientNameIco"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addEventToolbar"
            app:srcCompat="@drawable/ic_person_black_24dp" />

        <ImageView
            android:id="@+id/dateTimeIco"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="@+id/clientNameIco"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/clientNameIco"
            app:layout_constraintTop_toBottomOf="@+id/clientNameIco"
            app:srcCompat="@drawable/ic_date_range_black_24dp" />

        <TextView
            android:id="@+id/dashText"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="16dp"
            android:editable="false"
            android:gravity="bottom|center_horizontal"
            android:text="-"
            android:textSize="32dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/timeFromField"
            app:layout_constraintTop_toBottomOf="@+id/clientNameField" />

        <TextView
            android:id="@+id/serviceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_event_layout_services"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/dateField" />

        <TextView
            android:id="@+id/remindersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            android:text="@string/add_event_layout_reminders"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/notesView" />

        <CheckBox
            android:id="@+id/reminder1h"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_event_layout_reminder_1h"
            app:layout_constraintStart_toStartOf="@+id/reminderInstant"
            app:layout_constraintTop_toBottomOf="@id/reminderInstant" />

        <CheckBox
            android:id="@+id/reminder2h"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_event_layout_reminder_2h"
            app:layout_constraintStart_toStartOf="@+id/reminder1h"
            app:layout_constraintTop_toBottomOf="@+id/reminder1h" />

        <CheckBox
            android:id="@+id/reminder3h"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/add_event_layout_reminder_3h"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/reminder2h"
            app:layout_constraintTop_toBottomOf="@+id/reminder2h"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/reminder8h"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="68dp"
            android:layout_marginRight="68dp"
            android:text="@string/add_event_layout_reminder_8h"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminderInstant" />

        <CheckBox
            android:id="@+id/reminder12h"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:text="@string/add_event_layout_reminder_12h"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reminder8h" />

        <CheckBox
            android:id="@+id/reminder24h"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:checked="true"
            android:text="@string/add_event_layout_reminder_24h"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/reminder12h"
            app:layout_constraintTop_toBottomOf="@+id/reminder12h"
            app:layout_constraintVertical_bias="0.0" />

        <ListView
            android:id="@+id/servicesListView"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginEnd="28dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="28dp"
            android:layout_marginStart="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.898"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/serviceLabel" />

        <Button
            android:id="@+id/attachServicesButton"
            android:layout_width="0dp"
            android:layout_height="29dp"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:onClick="openAllServicesList"
            android:paddingBottom="5dp"
            android:paddingTop="8dp"
            android:text="@string/add_event_layout_add_services_button"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/servicesListView" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/dateTimeIco"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/dateTimeIco"
            app:layout_constraintTop_toBottomOf="@+id/dateTimeIco"
            app:srcCompat="@drawable/ic_local_offer_black_24dp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView9"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/imageView9"
            app:srcCompat="@drawable/ic_notifications_black_24dp" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/attachServicesButton"
            app:srcCompat="@drawable/ic_attach_money_black_24dp" />

        <EditText
            android:id="@+id/priceField"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            android:text="0"
            android:textSize="13sp"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/attachServicesButton" />

        <CheckBox
            android:id="@+id/reminderInstant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginStart="60dp"
            android:checked="true"
            android:text="@string/add_event_layout_reminder_instant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remindersLabel" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="305dp" />

        <EditText
            android:id="@+id/notesView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="Notes"
            android:inputType="textPersonName"
            android:maxLength="250"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/clientNameField"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/priceField" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:srcCompat="@drawable/ic_note_black_24dp" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>